Change link to gallery

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 accusantium delectus veritatis, obcaecati facilis nobis
                 praesentium error.
               </p>
-              <a href="https://gallery-jonathan.herokuapp.com/" target="_blank"
+              <a href="https://galleryfrontend.web.app/" target="_blank"
                 >Ver proyecto</a
               >
             </div>
