--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li class="nav__list-item">
                   <a class="nav__list-item-link" href="#contact">Contacto</a>
                 </li>
-                <li class="nav__list-item curriculum">
+                <li class="nav__list-item">
                   <a class="nav__list-item-link" href="">Ver Curriculum</a>
                 </li>
               </ul>
@@ -164,6 +164,30 @@
                 praesentium error.
               </p>
               <a href="https://portal-d0251.web.app/" target="_blank"
+                >Ver proyecto</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="projects__container">
+          <div class="project__item-container">
+            <img
+              src="./assets/projects/authenticate.png"
+              alt="project 1"
+              class="project__image"
+            />
+            <div class="project__description">
+              <h4>Authenticate App</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Distinctio, dolorem hic architecto voluptates ea voluptatum
+                earum assumenda nulla. Recusandae minima perspiciatis temporibus
+                accusantium delectus veritatis, obcaecati facilis nobis
+                praesentium error.
+              </p>
+              <a
+                href="https://authenticate-app-frontend.herokuapp.com/"
+                target="_blank"
                 >Ver proyecto</a
               >
             </div>
