--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </header>
       <div class="hero" id="hero">
         <div class="wrapper">
+          <img src="" alt="" />
           <h1 class="hero__title">Jonathan García Gonzalez</h1>
           <p class="hero__description">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum
