Complete header y hero

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </nav>
           </div>
         </div>
-        <div class="header__activator" id="header__activator">
+        <div class="nav__activator" id="nav__activator">
           <i class="fas fa-angle-left" id="activator__icon"></i>
         </div>
       </header>
@@ -258,7 +258,7 @@
         </div>
       </footer> -->
       <script>
-        const $activator = document.getElementById("header__activator");
+        const $activator = document.getElementById("nav__activator");
         const $nav = document.getElementById("nav");
         const $icon = document.getElementById("activator__icon");
 
