--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
   </head>
   <body>
     <div class="container">
-      <header>
+      <header id="main">
         <div class="wrapper">
           <div class="header-wrapper">
             <h3>Jonathan García</h3>
             <nav id="nav">
               <ul class="nav__list">
                 <li class="nav__list-item">
-                  <a class="nav__list-item-link" href="#hero">Inicio</a>
+                  <a class="nav__list-item-link" href="#main">Inicio</a>
                 </li>
                 <li class="nav__list-item">
                   <a class="nav__list-item-link" href="#habilities"
@@ -75,40 +75,40 @@
           </p>
         </div>
       </div>
-      <!-- <section class="habilities" id="habilities">
+      <section class="habilities" id="habilities">
         <h2 class="habilities__title">Habilidades</h2>
         <ul class="habilities__list">
-          <li>
+          <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/html.png" alt="webpack" />
             </div>
             <p class="hability__title">HTML</p>
           </li>
-          <li>
+          <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/css.png" class="css" alt="webpack" />
             </div>
             <p class="hability__title">CSS</p>
           </li>
-          <li>
+          <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/js.png" alt="webpack" />
             </div>
             <p class="hability__title">JavaScript</p>
           </li>
-          <li>
+          <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/react.png" alt="webpack" />
             </div>
             <p class="hability__title">React.js</p>
           </li>
-          <li>
+          <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/node.png" class="node" alt="webpack" />
             </div>
             <p class="hability__title">Node.js - Express.js</p>
           </li>
-          <li>
+          <li class="habilities__list-item">
             <div class="hability__logo">
               <img
                 src="./assets/logos/webpack.png"
@@ -118,7 +118,7 @@
             </div>
             <p class="hability__title">Webpack</p>
           </li>
-          <li>
+          <li class="habilities__list-item">
             <div class="hability__logo">
               <img
                 src="./assets/logos/bootstrap.png"
@@ -128,7 +128,7 @@
             </div>
             <p class="hability__title">Bootstrap</p>
           </li>
-          <li>
+          <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/git.png" alt="webpack" />
             </div>
@@ -136,7 +136,7 @@
           </li>
         </ul>
       </section>
-      <section class="projects" id="projects">
+      <!-- <section class="projects" id="projects">
         <h2 class="projects__title">Proyectos</h2>
         <div class="projects__container">
           <div class="project__item-container">
