Temporal Habilities complete

--- a/index.html
+++ b/index.html
@@ -136,78 +136,74 @@
           </li>
         </ul>
       </section>
-      <!-- <section class="projects" id="projects">
+      <section class="projects" id="projects">
         <h2 class="projects__title">Proyectos</h2>
-        <div class="projects__container">
-          <div class="project__item-container">
-            <img
-              src="./assets/projects/gallery.png"
-              alt="project 1"
-              class="project__image"
-            />
-            <div class="project__description">
-              <h4>Gallery</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Distinctio, dolorem hic architecto voluptates ea voluptatum
-                earum assumenda nulla. Recusandae minima perspiciatis temporibus
-                accusantium delectus veritatis, obcaecati facilis nobis
-                praesentium error.
-              </p>
-              <a href="https://galleryfrontend.web.app/" target="_blank"
-                >Ver proyecto</a
-              >
-            </div>
+        <div class="project__item-container">
+          <img
+            src="./assets/projects/gallery.png"
+            alt="project 1"
+            class="project__image"
+          />
+          <div class="project__description">
+            <h4>Gallery</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Distinctio, dolorem hic architecto voluptates ea voluptatum earum
+              assumenda nulla. Recusandae minima perspiciatis temporibus
+              accusantium delectus veritatis, obcaecati facilis nobis
+              praesentium error.
+            </p>
+            <a href="https://galleryfrontend.web.app/" target="_blank"
+              >Ver proyecto</a
+            >
           </div>
         </div>
-        <div class="projects__container">
-          <div class="project__item-container">
-            <img
-              src="./assets/projects/portal.png"
-              alt="project 1"
-              class="project__image"
-            />
-            <div class="project__description">
-              <h4>Portal</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Distinctio, dolorem hic architecto voluptates ea voluptatum
-                earum assumenda nulla. Recusandae minima perspiciatis temporibus
-                accusantium delectus veritatis, obcaecati facilis nobis
-                praesentium error.
-              </p>
-              <a href="https://portal-d0251.web.app/" target="_blank"
-                >Ver proyecto</a
-              >
-            </div>
+
+        <div class="project__item-container">
+          <img
+            src="./assets/projects/portal.png"
+            alt="project 1"
+            class="project__image"
+          />
+          <div class="project__description">
+            <h4>Portal</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Distinctio, dolorem hic architecto voluptates ea voluptatum earum
+              assumenda nulla. Recusandae minima perspiciatis temporibus
+              accusantium delectus veritatis, obcaecati facilis nobis
+              praesentium error.
+            </p>
+            <a href="https://portal-d0251.web.app/" target="_blank"
+              >Ver proyecto</a
+            >
           </div>
         </div>
-        <div class="projects__container">
-          <div class="project__item-container">
-            <img
-              src="./assets/projects/authenticate.png"
-              alt="project 1"
-              class="project__image"
-            />
-            <div class="project__description">
-              <h4>Authenticate App</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Distinctio, dolorem hic architecto voluptates ea voluptatum
-                earum assumenda nulla. Recusandae minima perspiciatis temporibus
-                accusantium delectus veritatis, obcaecati facilis nobis
-                praesentium error.
-              </p>
-              <a
-                href="https://authenticate-app-frontend.herokuapp.com/"
-                target="_blank"
-                >Ver proyecto</a
-              >
-            </div>
+
+        <div class="project__item-container">
+          <img
+            src="./assets/projects/authenticate.png"
+            alt="project 1"
+            class="project__image"
+          />
+          <div class="project__description">
+            <h4>Authenticate App</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Distinctio, dolorem hic architecto voluptates ea voluptatum earum
+              assumenda nulla. Recusandae minima perspiciatis temporibus
+              accusantium delectus veritatis, obcaecati facilis nobis
+              praesentium error.
+            </p>
+            <a
+              href="https://authenticate-app-frontend.herokuapp.com/"
+              target="_blank"
+              >Ver proyecto</a
+            >
           </div>
         </div>
       </section>
-      <footer id="contact">
+      <!--  <footer id="contact">
         <div class="wrapper">
           <div class="contact__container">
             <div class="contact__social">
