--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           </div>
         </div>
       </section>
-      <!--  <footer id="contact">
+      <footer id="contact">
         <div class="wrapper">
           <div class="contact__container">
             <div class="contact__social">
@@ -252,7 +252,7 @@
             </div>
           </div>
         </div>
-      </footer> -->
+      </footer>
       <script>
         const $activator = document.getElementById("nav__activator");
         const $nav = document.getElementById("nav");
