--- a/index.html
+++ b/index.html
@@ -83,30 +83,70 @@
               <img src="./assets/logos/html.png" alt="webpack" />
             </div>
             <p class="hability__title">HTML</p>
+            <div class="hability__description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
+                officiis blanditiis iusto aspernatur, quo aliquid iste
+                consectetur qui vitae cumque nobis aliquam ipsum!
+              </p>
+            </div>
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/css.png" class="css" alt="webpack" />
             </div>
             <p class="hability__title">CSS</p>
+            <div class="hability__description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
+                officiis blanditiis iusto aspernatur, quo aliquid iste
+                consectetur qui vitae cumque nobis aliquam ipsum!
+              </p>
+            </div>
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/js.png" alt="webpack" />
             </div>
             <p class="hability__title">JavaScript</p>
+            <div class="hability__description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
+                officiis blanditiis iusto aspernatur, quo aliquid iste
+                consectetur qui vitae cumque nobis aliquam ipsum!
+              </p>
+            </div>
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/react.png" alt="webpack" />
             </div>
             <p class="hability__title">React.js</p>
+            <div class="hability__description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
+                officiis blanditiis iusto aspernatur, quo aliquid iste
+                consectetur qui vitae cumque nobis aliquam ipsum!
+              </p>
+            </div>
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/node.png" class="node" alt="webpack" />
             </div>
             <p class="hability__title">Node.js - Express.js</p>
+            <div class="hability__description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
+                officiis blanditiis iusto aspernatur, quo aliquid iste
+                consectetur qui vitae cumque nobis aliquam ipsum!
+              </p>
+            </div>
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
@@ -117,6 +157,14 @@
               />
             </div>
             <p class="hability__title">Webpack</p>
+            <div class="hability__description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
+                officiis blanditiis iusto aspernatur, quo aliquid iste
+                consectetur qui vitae cumque nobis aliquam ipsum!
+              </p>
+            </div>
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
@@ -127,12 +175,28 @@
               />
             </div>
             <p class="hability__title">Bootstrap</p>
+            <div class="hability__description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
+                officiis blanditiis iusto aspernatur, quo aliquid iste
+                consectetur qui vitae cumque nobis aliquam ipsum!
+              </p>
+            </div>
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
               <img src="./assets/logos/git.png" alt="webpack" />
             </div>
             <p class="hability__title">Git (y GitHub)</p>
+            <div class="hability__description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
+                officiis blanditiis iusto aspernatur, quo aliquid iste
+                consectetur qui vitae cumque nobis aliquam ipsum!
+              </p>
+            </div>
           </li>
         </ul>
       </section>
@@ -147,11 +211,10 @@
           <div class="project__description">
             <h4>Gallery</h4>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Distinctio, dolorem hic architecto voluptates ea voluptatum earum
-              assumenda nulla. Recusandae minima perspiciatis temporibus
-              accusantium delectus veritatis, obcaecati facilis nobis
-              praesentium error.
+              Una aplicación de galería, en la cual subes una imagen, con una
+              descripción, y un nombre y al subirse podras verla en el inicio.
+              Tambien podremos eliminarla o verla en pantalla completa. Para
+              almacenar la imagen usé Cloudinary.
             </p>
             <a href="https://galleryfrontend.web.app/" target="_blank"
               >Ver proyecto</a
@@ -168,11 +231,10 @@
           <div class="project__description">
             <h4>Portal</h4>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Distinctio, dolorem hic architecto voluptates ea voluptatum earum
-              assumenda nulla. Recusandae minima perspiciatis temporibus
-              accusantium delectus veritatis, obcaecati facilis nobis
-              praesentium error.
+              Este proyecto es un pequeño portal el cual es una recreación del
+              que usamos en mi trabajo actual, pero añadiendo funcionalidades y
+              rediseño. Lo más resaltable de este proyecto es que contiene un
+              editor de textos con formato.
             </p>
             <a href="https://portal-d0251.web.app/" target="_blank"
               >Ver proyecto</a
@@ -189,11 +251,10 @@
           <div class="project__description">
             <h4>Authenticate App</h4>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Distinctio, dolorem hic architecto voluptates ea voluptatum earum
-              assumenda nulla. Recusandae minima perspiciatis temporibus
-              accusantium delectus veritatis, obcaecati facilis nobis
-              praesentium error.
+              Una aplicación que consiste en una ventana de "login" en la cual
+              se implementé estrategías de ingreso local, con Google, con
+              Twitter y con Facebook, y en la cual, una vez ingreasamos, podrá
+              ver su nombre, apellidos y correo.
             </p>
             <a
               href="https://authenticate-app-frontend.herokuapp.com/"
