--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           </div>
           <h1 class="hero__title">Jonathan García Gonzalez</h1>
           <p class="hero__description">
-            Desarrollador Frontend Jr. especializado en JavaScript,
-            especificamente con React. Conocimiento en backend con Node.js para
-            la creación de API REST. Gran pasión por la programación y la
-            tecnología en general, y con muchas ganas de aportar todo mi
-            conocimiento.
+            Desarrollador Frontend Junior, con conocimiento en backend con
+            Node.js y Express para la creación de API REST. Gran pasión por la
+            programación y la tecnología en general. Con muchas ganas de
+            aprender de otros programadores, poder compartir y aportar mis
+            conocimientos.
           </p>
         </div>
       </div>
@@ -85,10 +85,8 @@
             <p class="hability__title">HTML</p>
             <div class="hability__description">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
-                officiis blanditiis iusto aspernatur, quo aliquid iste
-                consectetur qui vitae cumque nobis aliquam ipsum!
+                Usado para crear la estructura de cada proyecto. Definimos la
+                información que se presentará al usuarido.
               </p>
             </div>
           </li>
@@ -99,10 +97,8 @@
             <p class="hability__title">CSS</p>
             <div class="hability__description">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
-                officiis blanditiis iusto aspernatur, quo aliquid iste
-                consectetur qui vitae cumque nobis aliquam ipsum!
+                Para dar estilos a la información que se está presentando, y
+                para que las aplicaciones tengan un buen aspecto.
               </p>
             </div>
           </li>
@@ -113,10 +109,9 @@
             <p class="hability__title">JavaScript</p>
             <div class="hability__description">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
-                officiis blanditiis iusto aspernatur, quo aliquid iste
-                consectetur qui vitae cumque nobis aliquam ipsum!
+                El nucleo de toda aplicación web. Con el definimos el
+                comportamiento de nuestras aplicaciones. Es el lenguaje de
+                programación que sabe leer el navegador.
               </p>
             </div>
           </li>
@@ -127,10 +122,9 @@
             <p class="hability__title">React.js</p>
             <div class="hability__description">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
-                officiis blanditiis iusto aspernatur, quo aliquid iste
-                consectetur qui vitae cumque nobis aliquam ipsum!
+                Librería de JavaScript para creación de interfaces. Permite
+                crear SPA y una mejor reutilización del código basado en
+                componentes.
               </p>
             </div>
           </li>
@@ -141,10 +135,9 @@
             <p class="hability__title">Node.js - Express.js</p>
             <div class="hability__description">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
-                officiis blanditiis iusto aspernatur, quo aliquid iste
-                consectetur qui vitae cumque nobis aliquam ipsum!
+                Para "correr" JavaScript del lado del servidor. En mi caso, lo
+                uso para crear las API REST de los proyectos y enviar datos a
+                una Base de datos.
               </p>
             </div>
           </li>
@@ -159,10 +152,9 @@
             <p class="hability__title">Webpack</p>
             <div class="hability__description">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
-                officiis blanditiis iusto aspernatur, quo aliquid iste
-                consectetur qui vitae cumque nobis aliquam ipsum!
+                Con el podemos empaquetar varios tipos de archivos, para que al
+                final, nos retorne un HTML, un CSS y un JS, que son los archivos
+                que sabe leer el navegador.
               </p>
             </div>
           </li>
@@ -177,10 +169,8 @@
             <p class="hability__title">Bootstrap</p>
             <div class="hability__description">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
-                officiis blanditiis iusto aspernatur, quo aliquid iste
-                consectetur qui vitae cumque nobis aliquam ipsum!
+                Nos otorga unos estilos ya definidos, que podemos usar de forma
+                sencilla para no tener que crearlos desde cero.
               </p>
             </div>
           </li>
@@ -191,10 +181,8 @@
             <p class="hability__title">Git (y GitHub)</p>
             <div class="hability__description">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Placeat odit sequi exercitationem fugiat assumenda quam maxime,
-                officiis blanditiis iusto aspernatur, quo aliquid iste
-                consectetur qui vitae cumque nobis aliquam ipsum!
+                El sistema de control de versiones que utilizo es GIT, y para
+                almacenarlos en un repositorio, uso GitHub.
               </p>
             </div>
           </li>
