--- a/index.html
+++ b/index.html
@@ -251,6 +251,10 @@
             >
           </div>
         </div>
+        <p class="visit__GH">
+          Sí quieres ver más proyectos, visita mi
+          <a href="https://github.com/jonathangg03" target="_blank">GitHub</a>
+        </p>
       </section>
       <footer id="contact">
         <div class="wrapper">
