--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="hero" id="hero">
         <div class="wrapper">
           <div class="hero__photo-container">
-            <img src="./assets/me.jpg" alt="" />
+            <img src="./assets/me.jpg" alt="Jonathan García" loading="lazy" />
           </div>
           <h1 class="hero__title">Jonathan García Gonzalez</h1>
           <p class="hero__description">
@@ -80,7 +80,7 @@
         <ul class="habilities__list">
           <li class="habilities__list-item">
             <div class="hability__logo">
-              <img src="./assets/logos/html.png" alt="webpack" />
+              <img src="./assets/logos/html.png" alt="webpack" loading="lazy" />
             </div>
             <p class="hability__title">HTML</p>
             <div class="hability__description">
@@ -92,7 +92,12 @@
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
-              <img src="./assets/logos/css.png" class="css" alt="webpack" />
+              <img
+                src="./assets/logos/css.png"
+                class="css"
+                alt="css"
+                loading="lazy"
+              />
             </div>
             <p class="hability__title">CSS</p>
             <div class="hability__description">
@@ -104,7 +109,11 @@
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
-              <img src="./assets/logos/js.png" alt="webpack" />
+              <img
+                src="./assets/logos/js.png"
+                alt="JavaScript"
+                loading="lazy"
+              />
             </div>
             <p class="hability__title">JavaScript</p>
             <div class="hability__description">
@@ -117,7 +126,11 @@
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
-              <img src="./assets/logos/react.png" alt="webpack" />
+              <img
+                src="./assets/logos/react.png"
+                alt="React.js"
+                loading="lazy"
+              />
             </div>
             <p class="hability__title">React.js</p>
             <div class="hability__description">
@@ -130,7 +143,12 @@
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
-              <img src="./assets/logos/node.png" class="node" alt="webpack" />
+              <img
+                src="./assets/logos/node.png"
+                class="node"
+                alt="Node.js"
+                loading="lazy"
+              />
             </div>
             <p class="hability__title">Node.js - Express.js</p>
             <div class="hability__description">
@@ -146,7 +164,8 @@
               <img
                 src="./assets/logos/webpack.png"
                 class="webpack"
-                alt="webpack"
+                alt="Webpack"
+                loading="lazy"
               />
             </div>
             <p class="hability__title">Webpack</p>
@@ -163,7 +182,8 @@
               <img
                 src="./assets/logos/bootstrap.png"
                 class="bootstrap"
-                alt="webpack"
+                alt="Bootstrap"
+                loading="lazy"
               />
             </div>
             <p class="hability__title">Bootstrap</p>
@@ -176,7 +196,7 @@
           </li>
           <li class="habilities__list-item">
             <div class="hability__logo">
-              <img src="./assets/logos/git.png" alt="webpack" />
+              <img src="./assets/logos/git.png" alt="Git" loading="lazy" />
             </div>
             <p class="hability__title">Git (y GitHub)</p>
             <div class="hability__description">
@@ -193,8 +213,9 @@
         <div class="project__item-container">
           <img
             src="./assets/projects/gallery.png"
-            alt="project 1"
+            alt="Gallery"
             class="project__image"
+            loading="lazy"
           />
           <div class="project__description">
             <h4>Gallery</h4>
@@ -213,8 +234,9 @@
         <div class="project__item-container">
           <img
             src="./assets/projects/portal.png"
-            alt="project 1"
+            alt="Portal"
             class="project__image"
+            loading="lazy"
           />
           <div class="project__description">
             <h4>Portal</h4>
@@ -233,8 +255,9 @@
         <div class="project__item-container">
           <img
             src="./assets/projects/authenticate.png"
-            alt="project 1"
+            alt="Authenticate App"
             class="project__image"
+            loading="lazy"
           />
           <div class="project__description">
             <h4>Authenticate App</h4>
