--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       type="text/css"
       media="screen and (min-width: 860px)"
     />
-    <title>Jonathan García - Portafolio</title>
+    <title>Jonathan David García González</title>
     <script
       src="https://kit.fontawesome.com/473d269aa9.js"
       crossorigin="anonymous"
