--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     ></script>
   </head>
   <body>
-    <div class="container">
-      <header id="main">
+    <div class="container" id="main">
+      <header>
         <div class="wrapper">
           <div class="header-wrapper">
             <h3>Jonathan García</h3>
@@ -50,7 +50,12 @@
                   <a class="nav__list-item-link" href="#contact">Contacto</a>
                 </li>
                 <li class="nav__list-item">
-                  <a class="nav__list-item-link" href="">Ver Curriculum</a>
+                  <a
+                    class="nav__list-item-link"
+                    href="./assets/curriculum.pdf"
+                    target="_blank"
+                    >Curriculum</a
+                  >
                 </li>
               </ul>
             </nav>
