--- a/index.html
+++ b/index.html
@@ -223,16 +223,21 @@
             loading="lazy"
           />
           <div class="project__description">
-            <h4>Gallery</h4>
-            <p>
-              Una aplicación de galería, en la cual subes una imagen, con una
-              descripción, y un nombre y al subirse podras verla en el inicio.
-              Tambien podremos eliminarla o verla en pantalla completa. Para
-              almacenar la imagen usé Cloudinary.
-            </p>
-            <a href="https://galleryfrontend.web.app/" target="_blank"
-              >Ver proyecto</a
-            >
+            <div class="project__description-wrapper">
+              <h4>Gallery</h4>
+              <p>
+                Una aplicación de galería, en la cual subes una imagen, con una
+                descripción, y un nombre y al subirse podras verla en el inicio.
+                Tambien podremos eliminarla o verla en pantalla completa. Para
+                almacenar la imagen usé Cloudinary.
+              </p>
+              <a href="https://galleryfrontend.web.app/" target="_blank"
+                >Ver proyecto</a
+              >
+            </div>
+            <div class="project__title-container">
+              <h2>GALLERY</h2>
+            </div>
           </div>
         </div>
 
@@ -244,19 +249,23 @@
             loading="lazy"
           />
           <div class="project__description">
-            <h4>Portal</h4>
-            <p>
-              Este proyecto es un pequeño portal el cual es una recreación del
-              que usamos en mi trabajo actual, pero añadiendo funcionalidades y
-              rediseño. Lo más resaltable de este proyecto es que contiene un
-              editor de textos con formato.
-            </p>
-            <a href="https://portal-d0251.web.app/" target="_blank"
-              >Ver proyecto</a
-            >
+            <div class="project__description-wrapper">
+              <h4>Portal</h4>
+              <p>
+                Este proyecto es un pequeño portal el cual es una recreación del
+                que usamos en mi trabajo actual, pero añadiendo funcionalidades
+                y rediseño. Lo más resaltable de este proyecto es que contiene
+                un editor de textos con formato.
+              </p>
+              <a href="https://portal-d0251.web.app/" target="_blank"
+                >Ver proyecto</a
+              >
+            </div>
+            <div class="project__title-container">
+              <h2>PORTAL</h2>
+            </div>
           </div>
         </div>
-
         <div class="project__item-container">
           <img
             src="./assets/projects/authenticate.png"
@@ -265,18 +274,23 @@
             loading="lazy"
           />
           <div class="project__description">
-            <h4>Authenticate App</h4>
-            <p>
-              Una aplicación que consiste en una ventana de "login" en la cual
-              se implementé estrategías de ingreso local, con Google, con
-              Twitter y con Facebook, y en la cual, una vez ingreasamos, podrá
-              ver su nombre, apellidos y correo.
-            </p>
-            <a
-              href="https://authenticate-app-frontend.herokuapp.com/"
-              target="_blank"
-              >Ver proyecto</a
-            >
+            <div class="project__description-wrapper">
+              <h4>Authenticate App</h4>
+              <p>
+                Una aplicación que consiste en una ventana de "login" en la cual
+                se implementé estrategías de ingreso local, con Google, con
+                Twitter y con Facebook, y en la cual, una vez ingreasamos, podrá
+                ver su nombre, apellidos y correo.
+              </p>
+              <a
+                href="https://authenticate-app-frontend.herokuapp.com/"
+                target="_blank"
+                >Ver proyecto</a
+              >
+            </div>
+            <div class="project__title-container">
+              <h2>AUTHENTICATE APP</h2>
+            </div>
           </div>
         </div>
         <p class="visit__GH">
