Fix typos and add box-shadow

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="hero__photo-container">
             <img src="./assets/me.jpg" alt="Jonathan García" loading="lazy" />
           </div>
-          <h1 class="hero__title">Jonathan García Gonzalez</h1>
+          <h1 class="hero__title">Jonathan García González</h1>
           <p class="hero__description">
             Desarrollador Frontend Junior, con conocimiento en backend con
             Node.js y Express para la creación de API REST. Gran pasión por la
@@ -91,7 +91,7 @@
             <div class="hability__description">
               <p>
                 Usado para crear la estructura de cada proyecto. Definimos la
-                información que se presentará al usuarido.
+                información que se presentará al usuario.
               </p>
             </div>
           </li>
@@ -123,7 +123,7 @@
             <p class="hability__title">JavaScript</p>
             <div class="hability__description">
               <p>
-                El nucleo de toda aplicación web. Con el definimos el
+                El núcleo de toda aplicación web. Con él definimos el
                 comportamiento de nuestras aplicaciones. Es el lenguaje de
                 programación que sabe leer el navegador.
               </p>
@@ -158,9 +158,9 @@
             <p class="hability__title">Node.js - Express.js</p>
             <div class="hability__description">
               <p>
-                Para "correr" JavaScript del lado del servidor. En mi caso, lo
-                uso para crear las API REST de los proyectos y enviar datos a
-                una Base de datos.
+                Para usar JavaScript del lado del servidor. En mi caso, lo uso
+                para crear las API REST de los proyectos y enviar datos a una
+                Base de datos.
               </p>
             </div>
           </li>
@@ -176,9 +176,9 @@
             <p class="hability__title">Webpack</p>
             <div class="hability__description">
               <p>
-                Con el podemos empaquetar varios tipos de archivos, para que al
+                Con él podemos empaquetar varios tipos de archivos, para que al
                 final, nos retorne un HTML, un CSS y un JS, que son los archivos
-                que sabe leer el navegador.
+                que lee el navegador.
               </p>
             </div>
           </li>
@@ -206,7 +206,7 @@
             <p class="hability__title">Git (y GitHub)</p>
             <div class="hability__description">
               <p>
-                El sistema de control de versiones que utilizo es GIT, y para
+                El sistema de control de versiones que utilizo es Git, y para
                 almacenarlos en un repositorio, uso GitHub.
               </p>
             </div>
@@ -227,9 +227,10 @@
               <h4>Gallery</h4>
               <p>
                 Una aplicación de galería, en la cual subes una imagen, con una
-                descripción, y un nombre y al subirse podras verla en el inicio.
-                Tambien podremos eliminarla o verla en pantalla completa. Para
-                almacenar la imagen usé Cloudinary.
+                descripción, y un nombre y al subirse podrás verla en el inicio.
+                También podremos eliminarla o verla en pantalla completa. Para
+                almacenar la imagen usé Cloudinary. El backend corre en Heroku,
+                y el frontend en Firebase.
               </p>
               <a href="https://galleryfrontend.web.app/" target="_blank"
                 >Ver proyecto</a
@@ -254,8 +255,9 @@
               <p>
                 Este proyecto es un pequeño portal el cual es una recreación del
                 que usamos en mi trabajo actual, pero añadiendo funcionalidades
-                y rediseño. Lo más resaltable de este proyecto es que contiene
-                un editor de textos con formato.
+                y rediseño. Lo más destacado es que contiene un editor de textos
+                con formato. El backend corre en Heroku, y el frontend en
+                Firebase.
               </p>
               <a href="https://portal-d0251.web.app/" target="_blank"
                 >Ver proyecto</a
@@ -277,9 +279,9 @@
             <div class="project__description-wrapper">
               <h4>Authenticate App</h4>
               <p>
-                Una aplicación que consiste en una ventana de "login" en la cual
-                se implementé estrategías de ingreso local, con Google, con
-                Twitter y con Facebook, y en la cual, una vez ingreasamos, podrá
+                Una aplicación que consiste en una ventana de log in en la cual
+                se implemente estrategias de ingreso local, con Google, con
+                Twitter y con Facebook, y en la cual, una vez ingresamos, podrá
                 ver su nombre, apellidos y correo.
               </p>
               <a
