--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <header>
         <div class="wrapper">
           <div class="header-wrapper">
-            <a href="/" class="header__title">Jonathan García González</a href="/">
+            <a href="/" class="header__title">JONATHAN GARCÍA GONZÁLEZ</a href="/">
             <nav id="nav">
               <ul class="nav__list">
                 <li class="nav__list-item">
