Change profile photo

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="hero" id="hero">
         <div class="wrapper">
           <div class="hero__photo-container">
-            <img src="./assets/me.jpg" alt="Jonathan García" loading="lazy" />
+            <div class="hero__photo"></div>
           </div>
           <p class="hero__description">
             Desarrollador Frontend Junior, con conocimiento en backend con
