--- a/index.html
+++ b/index.html
@@ -305,6 +305,24 @@
           <a href="https://github.com/jonathangg03" target="_blank">GitHub</a>
         </p>
       </section>
+      <section class="form" class="projects__title">
+        <h2>Formulario de contacto</h2>
+        <form action="https://formspree.io/f/mdoywqpd" method="POST" id="form">
+          <label>
+            <p>Nombre completo</p>
+            <input type="text" required placeholder="Nombre" name="name">
+          </label>
+          <label>
+            <p>Nombre de la empresa</p>
+            <input type="text" required placeholder="Empresa" name="company">
+          </label>
+          <label>
+            <p>Mensaje</p>
+            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          </label>
+          <button type="submit">Enviar</button>
+        </form>
+      </section>
       <footer id="contact">
         <div class="wrapper">
           <div class="contact__container">
@@ -359,11 +377,32 @@
         const $activator = document.getElementById("nav__activator");
         const $nav = document.getElementById("nav");
         const $icon = document.getElementById("activator__icon");
+        const $form = document.querySelector('#form')
+
+        console.log($form)
 
         $activator.addEventListener("click", () => {
           $nav.classList.toggle("show__nav");
           $icon.classList.toggle("fa-angle-right");
         });
+
+        $form.addEventListener("submit", handleSubmit)
+
+        async function handleSubmit (event) {
+          event.preventDefault()
+          const formData = new FormData(this)
+          const response = await fetch(this.action, {
+            method: "post",
+            body: formData,
+            headers: {
+              "Accept": "application/json"
+            }
+          })
+          if(response.ok) {
+            this.reset()
+            alert("Mensaje enviado. Gracias por tomarme en cuenta, te estare contactando pronto.")
+          }
+        }
       </script>
     </div>
   </body>
